overflow hidden parece resolver mas come a imagem oa invés de diminuir

--- a/trabalho5/ex2/index.css
+++ b/trabalho5/ex2/index.css
@@ -13,11 +13,13 @@ header {
   text-align: center;
   box-sizing: border-box;
   width: 100%;
+  overflow: hidden;
 }
 
 main {
   width: 70%;
   margin: 0 auto;
+  overflow: hidden;
 }
 
 @media (max-width: 400px) {
